--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
-    "expo": "53.0.13",
+    "date-fns": "^3.0.0",
+    "expo": "^53.0.13",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
@@ -21,8 +22,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "date-fns": "^3.0.0"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -31,4 +31,3 @@
   },
   "private": true
 }
-
