--- a/app.json
+++ b/app.json
@@ -21,10 +21,7 @@
       }
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
-        "backgroundColor": "#1a1a1a"
-      },
+      "icon": "./assets/icon.png",
       "edgeToEdgeEnabled": true,
       "package": "com.hundred.app",
       "permissions": [
