--- a/ios/Hundred.xcodeproj/xcshareddata/xcschemes/Hundred.xcscheme
+++ b/ios/Hundred.xcodeproj/xcshareddata/xcschemes/Hundred.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "100.app"
-               BlueprintName = "100"
-               ReferencedContainer = "container:100.xcodeproj">
+               BuildableName = "Hundred.app"
+               BlueprintName = "Hundred"
+               ReferencedContainer = "container:Hundred.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "100Tests.xctest"
-               BlueprintName = "100Tests"
-               ReferencedContainer = "container:100.xcodeproj">
+               BuildableName = "HundredTests.xctest"
+               BlueprintName = "HundredTests"
+               ReferencedContainer = "container:Hundred.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "100.app"
-            BlueprintName = "100"
-            ReferencedContainer = "container:100.xcodeproj">
+            BuildableName = "Hundred.app"
+            BlueprintName = "Hundred"
+            ReferencedContainer = "container:Hundred.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "100.app"
-            BlueprintName = "100"
-            ReferencedContainer = "container:100.xcodeproj">
+            BuildableName = "Hundred.app"
+            BlueprintName = "Hundred"
+            ReferencedContainer = "container:Hundred.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
